--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,15 @@ services:
       - "3000:3000"
     volumes:
       - .:/home/node/app
+
+  db:
+    build: ./db
+    environment:
+      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_REPLICA_HOST: db
+    volumes:
+       - mongodb_data:/data/db
+  
+  volumes:
+    mongodb_data:
+      driver: local
